refactor(clean): fix URL constructor deprecation and clean legacy committed compiled class files